# hapl

./: LICENSE  README.md  cabal.project  hapl.cabal  path.txt  test.txt  testcode.hs  text.txt
.github/workflows/: haskell.yml
src/: Algorithm.hs  Graph.hs  Main.hs
tests/: Algorithm_tests.hs  Graph_tests.hs  HAPL_tests.hs
tests/test_files/: test1.hs  test10.hs  test2.hs  test3.hs  test4.hs  test5.hs  test6.hs  test7.hs  test8.hs  test9.hs
