cabal-version:      2.4
name:               hapl
version:            0.1.0.0
synopsis:           Plagiarism checker for Haskell codes

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            LGPL-2.1-only
license-file:       LICENSE
author:             Merth Borbála
maintainer:         borka.merth14@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable hapl
    main-is:          Main.hs
    ghc-options:
        -threaded

    -- Modules included in this executable, other than Main.
    other-modules:
        Graph
        Algorithm

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base,
        haskell-src-exts-simple,
        filepath,
        astar,
        hashable,
        unordered-containers,
        parallel,
        directory,
        HUnit,
        deepseq,
        Glob
    hs-source-dirs:   src
    default-language: GHC2021

Test-Suite test-hapl
  type:                exitcode-stdio-1.0
  hs-source-dirs:
        tests,
        src
  default-language:    GHC2021
  main-is:             HAPL_tests.hs
  other-modules:       
        Graph, 
        Algorithm,
        Algorithm_tests,
        Graph_tests
  build-depends:
        base,
        haskell-src-exts-simple,
        filepath,
        astar,
        hashable,
        unordered-containers,
        parallel,
        directory,
        HUnit,
        deepseq,
        Glob